# glint

./: .gitignore  CLAUDE.md  CMakeLists.txt  DEVLOG.md  README.md
src/: main.cpp
src/rasterizer/: framebuffer.cpp  framebuffer.h  mat4.cpp  mat4.h  pipeline.cpp  pipeline.h  triangle.cpp  triangle.h  vec.cpp  vec.h
